static/css/sheets.css
/* ... */
#controls .circleButton:hover {
	background-color: #08c;
}

#controls .circleButton > .fa {
	position: relative;
	top: 2px;
}

.optionsMenu {
	color: black;
	position: absolute;
	text-align: left;
	display: none;
	font-style: normal;
	text-shadow: none;
	padding: 6px 0px 3px 0px;
	background: white;
	font-size: 17px;
	border: 1px solid #ccc;
	z-index: 5;
	width: 220px;
	top: -20px;
	right: auto;
	left: 50px;
	line-height: 1.2;
}

#addButton:hover .optionsMenu, #options:hover .optionsMenu {
	display: block;
}

.optionTitle {
	padding: 5px 12px;
}

.optionHeader {
	font-weight: bold;
	margin-left: 12px;
}

.optionItem, .optionLink, .languageToggleOption div, .layoutToggleOption div, .sideBySideToggleOption div {
	padding: 5px 12px;
	cursor: pointer;
	white-space: nowrap;
}
.optionItem:hover,
.optionTitle:hover, .optionLink:hover, .languageToggleOption div:hover, .layoutToggleOption div:hover .sideBySideToggleOption div:hover {
	background: #08c;
	color:white;
}

#assignable {
	margin:10px;
}

#assignedSheets {
	margin: 10px 10px 0 10px;
}

#assignmentURLLink {
	width:300px;
	text-align: center;
}

#assignmentsModal .btn {
	margin-top: 5px;
}

.subMenu {
	display: none;
	position: absolute;
	background: white;
	top: 0px;
	left: 220px;
	border: 1px solid #ccc;
	box-shadow: 1px 1px 1px #555;

}
.optionGroup {
	position: relative;
}

.optionGroup .optionTitle .fa-caret-right {
	position: absolute;
	right: 6px;
	top: 5px;
}

.optionGroup:hover .subMenu {
	display: block;
}

.line {
	height: 1px;
	width: 100%;
	background: #ddd;
	margin: 2px 0px;
}

.optionsMenu .fa {
	margin-right: 8px;
	font-size: 13px;
}

.hidden {
	visibility: hidden;
}

#addSourceModal {
	padding: 18px;
	text-align: center;
	z-index: 100;
}

#addDialogTitle {
	font-size: 19px;
	width: 520px;
	margin-bottom: 15px;
	padding: 0;
	position: relative;

}

#closeAddSource {
	position: absolute;
	top: 5px;
	right: 5px;
	cursor: pointer;
	font-size: 22px;
}

#add {
	width: 520px;
	font-size: 17px;
	border-radius: 3px;
}

#addEg {
	font-style: italic;
	font-size: 14px;
	margin-top: 0px;
}

#addOr {
	margin: 14px;
	font-size: 24px;
	text-align: center;
	font-style: italic;
}

#addBrowseBox {
	text-align: center;
}

#addBrowse {
}

#addSourceOK {
	position: absolute;
	right: 0px;
	bottom: -43px;
}

#textPreview {
	position: absolute;
	padding: 4px;
	background: white;
	border: 1px solid #ddd;
	border-radius: 3px;
	z-index: 101;
	width: 600px;
}

#textPreview .previewLine {
	display: inline;
}

#textPreview .previewNumber {
	font-weight: bold;
	font-variant: small-caps;
}

#textPreview .he, #textPreview .en {
	padding: 10px;
}

#textPreview .he {
	direction: rtl;
}

#textPreview .previewNoText {
	direction: ltr;
}

#textPreview .previewWarn {
	color: #B94A48;
	padding: 20px;
}

#textPreview .previewWarn .btn {
	float: right;
}
	
#title {
	font-size: 36px;
	min-height: 40px;
	margin-bottom: 6px;
	text-align: center;
	line-height: normal;
}

#author {
	text-align: center;
	font-style: italic;
	margin-bottom: 4px;
}

#via {
	font-size: 13px;
}

#bottomAuthor {
	text-align: center;
	font-style: italic;
}

#bottomVia {
	font-size: 13px;
}

#likeLink {
	color: black;
	text-decoration: none;
}

#likes {
	display: none;
	text-align: center;
}

#sheet.public #likes {
	display: block;
}

#likeInfo {
	cursor: pointer;
}

#likeInfo:hover {
	text-decoration: underline;
}

.titleSub {
	font-size: 20px;
	margin-left: 11px;
	color: #555;
}

#sources {
	font-size: 20px;
	margin: 0px;
	padding: 0px;
	list-style-type: none;
}

#sources { 
	margin-top: 40px;
}

#sheet #sources .sheetItem .sourceNumber {
	display: none;
	font-size: 15px;
}

#sheet.numbered.hebrew #sources .sheetItem .sourceNumber.en {
	display: none;
}

#sheet.numbered.english #sources .sheetItem .sourceNumber.he {
	display: none;
}

#sheet.numbered #sources .sheetItem .sourceNumber {
	display: block;
}

.sheetItem {
	position: relative;
	padding: 32px 32px;
	margin-top: -32px;
}

#sheet #sources .sheetItem .sourceNumber.en {
	position: absolute;
	width: 50px;
	text-align: right;
	top: 35px;
	left: -32px;
}

#sheet #sources .sheetItem .sourceNumber.he {
	position: absolute;
	width: 50px;
	text-align: left;
	top: 37px;
	right: -32px;
}

#sheet.boxed #sources .sheetItem .sourceNumber {
	top: 17px;
}

#sheet #sources .sheetItem.hasCustom .sourceNumber {
	top: 56px;
}

#sheet .sourceControlsOpen {
	background-color: #eee;
	z-index: 2;
}

#sourceControls {
	text-align: center;
	position: absolute;
	bottom: 7px;
	width: 300px;
	background-color: #eee;
	left: 50%;
	margin-left: -150px;
}

.sourceControlsTop #sourceControls {
	bottom: auto;
	top: 7px;
}

#sourceControls div {
	display: inline-block;
	margin: 0 5px;
	font-size: 15px;
	cursor: pointer;
}

#sourceControls div:hover {
	color: #08c;
}

.source {
	position: relative;
}

.source .title, .source .customTitle, .outside .title {
	font-size: 18px;
	font-weight: bold;
	display: inline-block;
	line-height: 24px;
}

.source .title {
	cursor: pointer;
	width: 100%;
	margin: 0;
}

.source .title:hover {
	text-decoration: underline;
}

.source .title a {
	color: black;
}

.source .title .ui-icon-extlink {
	vertical-align: -3px;
}

.source .customTitle {
	display: none;
	width: 100%;
	text-align: center;
}

.source .openLink {
	font-size: 13px;
	letter-spacing: 1px;
	margin: 0 12px;
	color: #222;
}

.source .openLink .ui-icon {
	display: inline-block;
}

.text {
	font-size: 19px;
	line-height: 1.3;
	position: relative;
}



.text .en,
.text .he {
	min-height: 20px;
}

#sheet .en {
	direction: ltr;
}
#sheet .he {
	direction: rtl;
	text-align: right;
	font-family: "Times New Roman", Serif;
	font-size: 24px;
}

/* Allows line height to change with font-size */
.source .text .he span,
.source .text .en span,
#title span,
.comment span,
.outside span,
.outsideBi .text .he span,
.outsideBi .text .en span,  {
	display: inline-block;
}

.source .text .he .segment,
.source .text .en .segment {
	display: inline;
}

#sheet.english .en {
	display: block;
}
/* ... */

